--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-= gallows
+= pinky
 
 Description goes here.
 
-== Contributing to gallows
+== Contributing to pinky
  
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
